# Unit2I

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
plan/: DESIGN.md  EXAMPLES.md  IMPLEMENTATION_STEPS.md  README.md
src/unit2i/: __init__.py  client.py  config.py  errors.py  model_catalog.py  normalize.py  provider_options.py  types.py
src/unit2i/providers/: __init__.py  base.py  dashscope.py  model_catalog.py  provider_options.py  registry.py  volcengine.py
src/unit2i/utils/: http.py  rate_limit.py
tests/: test_client.py  test_http.py  test_model_catalog.py  test_normalize.py  test_providers.py
