[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unit2i"
version = "0.1.0"
description = "Unified text-to-image SDK for DashScope and Volcengine"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Olynx", email = "n.lxp@qq.com" }
]
license = { text = "MIT" }
keywords = ["text-to-image", "sdk", "dashscope", "volcengine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers"
]
dependencies = [
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[dependency-groups]
dev = [
  "build>=1.4.1",
  "ipykernel>=7.2.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "setuptools>=82.0.1",
  "twine>=6.2.0",
  "wheel>=0.46.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
cache-dir = "../../uv_cache"
